# kata-gilded-rose

./: .gitignore  pyproject.toml
python/: gilded_rose.py  test_gilded_rose.py  texttest_fixture.py
