[tool.poetry]
name = "kata-template"
version = "0.1.0"
description = "A template for Python coding katas using Poetry."
authors = ["josempd <josempd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
lint = "flake8 ."
format = "black ."
